[tool.poetry]
name = "benta"
version = "0.1.0"
description = "Benta is your inventory systems"
authors = ["iRaySpace <irayspacii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
fastapi-crudrouter = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
